refactor: 컨트롤러에서 잘못된 입력 다시 받는 중복 코드 추상메서드 구현